[package]
name = "jenkinsfile-tester"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "jenkinsfile-tester"
path = "src/main.rs"

[dependencies]
pest        = "=2.7.15"
pest_derive = "=2.7.15"
wasm-bindgen = "0.2"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0", default-features = false, features = ["alloc"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
